k8s-manifests/eva-server/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eva-server-prod
  labels:
    environment: production
