k8s-manifests/eva-server/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eva-server
spec:
  rules:
  - host: www.ebi.ac.uk
    http:
      paths:
      - path: /eva/webservices/rest
        pathType: Prefix
        backend:
          service:
            name: eva-server
            port:
              number: 8080
